@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2014 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2014-2019 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,9 +22,11 @@ package org.nuxeo.ecm.directory.ldap;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.nuxeo.ecm.directory.ldap.ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import javax.inject.Inject;
@@ -72,7 +74,6 @@ public class TestExternalLDAPSessionSecurity {
 
     @Inject
     ExternalLDAPDirectoryFeature ldapFeature;
-
 
     @Before
     public void setUp() {
@@ -179,21 +180,17 @@ public class TestExternalLDAPSessionSecurity {
         DocumentModel entry = groupDirSession.getEntry("members");
         assertNotNull(entry);
 
-        assertEquals("cn=members,ou=editable,ou=groups,dc=example,dc=com",
-                entry.getProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "dn"));
+        assertEquals("cn=members,ou=editable,ou=groups,dc=example,dc=com", entry.getProperty(GROUP_SCHEMANAME, "dn"));
 
-        assertEquals(Arrays.asList("submembers"),
-                entry.getProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "subGroups"));
+        assertEquals(List.of("submembers"), entry.getProperty(GROUP_SCHEMANAME, "subGroups"));
 
         // edit description and members but not subGroups
-        entry.setProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "description", "AWonderfulGroup");
-        entry.setProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "members", Arrays.asList("user1", "user2"));
+        entry.setProperty(GROUP_SCHEMANAME, "description", "AWonderfulGroup");
+        entry.setProperty(GROUP_SCHEMANAME, "members", Arrays.asList("user1", "user2"));
         groupDirSession.updateEntry(entry);
 
         entry = groupDirSession.getEntry("members");
-        Assert.assertEquals("AWonderfulGroup",
-                entry.getProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "description"));
-
+        assertEquals("AWonderfulGroup", entry.getProperty(GROUP_SCHEMANAME, "description"));
         dummyLogin.logout();
     }
 
